--- a/xcms-preprocessing-bullets.Rmd
+++ b/xcms-preprocessing-bullets.Rmd
@@ -1,92 +1,72 @@
 ---
 title: "Metabolomics data pre-processing using xcms"
-author: "Johannes Rainer (johannes.rainer@eurac.edu)\ngithub/twitter: jotsetung"
-graphics: yes
+author: "Johannes Rainer (johannes.rainer@eurac.edu) github/twitter: jotsetung"
 date: "`r doc_date()`"
-output:
-  BiocStyle::html_document:
-    number_sections: true
-    toc_float: true
-    toc_depth: 2
-bibliography: references.bib
-references:
-- id: dummy
-  title: no title
-  author:
-  - family: noname
-    given: noname
 ---
-
-<!-- 
-NOTE: this document should not be edited manually, as it will be over-written
-by exporting the metabolomics-preprocessing.org file.
--->
 
 
 # Background
 
--   `xcms` part of Bioconductor since 2006, *standard* toolbox for LC/GC-MS data
-    preprocessing.
--   Major changes in `xcms` version > 3:
-    -   re-use data structures from Bioconductor's `MSnbase` package
-    -   native MSn support
-    -   new functions
-    -   internal changes and code cleanup
+- `xcms` part of Bioconductor since 2006, *standard* toolbox for LC/GC-MS data       preprocessing.
+- Major changes in `xcms` version > 3:
+  - re-use data structures from Bioconductor's `MSnbase` package
+  - native MSn support
+  - new functions
+  - internal changes and code cleanup
 
 ## Mass spectrometry
 
--   Mass spectrometry (MS) allows to measure abundances of charged ions in a
-    sample.
--   Data is represented/measured in a spectrum.
+- Mass spectrometry (MS) allows to measure abundances of charged ions in a
+  sample.
+- Data is represented/measured in a spectrum.
 
 ![](images/MS.png)
 
--   Many ions with the same/similar mass-to-charge ratio m/z.
--   Additional separation of compounds by additional properties
-    (hydrophobic/hydrophilic): liquid or gas chromatography.
+- Many ions with the same/similar mass-to-charge ratio m/z.
+- Additional separation of compounds by additional properties
+  (hydrophobic/hydrophilic): liquid or gas chromatography.
 
 ![](images/LCMS.png)
 
--   LC-MS based untargeted metabolomics: identify *chromatographic* peaks.
+- LC-MS based untargeted metabolomics: identify *chromatographic* peaks.
 
 
 ## Definitions and common naming convention
 
--   chromatographic peak: peak containing the signal from an ion in retention time
-    dimension.
--   chromatographic peak detection: process in which chromatographic peaks are
-    identified within each file.
--   alignment: process that adjusts for retention time differences between files.
--   correspondence: grouping of chromatographic peaks (presumably from the same
-    ion) across files.
--   feature: chromatographic peaks grouped across samples.
+- chromatographic peak: peak containing the signal from an ion in retention time     dimension.
+- chromatographic peak detection: process in which chromatographic peaks are
+  identified within each file.
+- alignment: process that adjusts for retention time differences between files.
+- correspondence: grouping of chromatographic peaks (presumably from the same
+  ion) across files.
+- feature: chromatographic peaks grouped across samples.
 
 
 # Workflow: metabolomics data preprocessing using `xcms`
 
 The workflow is focused on the **new** `xcms` interface/functions and covers:
 
--   Basic MS data handling (`MSnbase`)
--   Simple MS data centroiding (`MSnbase`)
--   LC-MS data pre-processing (`xcms`):
-    -   chromatographic peak detection
-    -   alignment
-    -   correspondence
--   Not covered:
-    -   data normalization
-    -   compound identification
-    -   differential abundance analysis
+- Basic MS data handling (`MSnbase`)
+- Simple MS data centroiding (`MSnbase`)
+- LC-MS data pre-processing (`xcms`):
+  - chromatographic peak detection
+  - alignment
+  - correspondence
+- Not covered:
+  - data normalization
+  - compound identification
+  - differential abundance analysis
 
 
 ## Prerequisites
 
--   Rstudio
--   R version >= 3.5.0
--   Libraries:
+- Rstudio
+- R version >= 3.5.0
+- Libraries:
 
-```{r  eval = FALSE, results = "hide" }
+```{r eval = FALSE, results = "hide", message = FALSE}
 source("https://bioconductor.org/biocLite.R")
-biocLite(c("xcms", "MSnbase", "doParallel", "rgl", "msdata", "magrittr",
+biocLite(c("xcms", "MSnbase", "doParallel", "msdata", "magrittr",
 	   "devtools"))
 ## Need xcms version > 3.3.1
 if (packageVersion("xcms") < "3.3.1")
@@ -96,16 +76,16 @@ if (packageVersion("xcms") < "3.3.1")
 
 ## Data import and representation
 
--   MS data can be loaded with the `readMSData` function.
--   `mode = "onDisk"` does read only header information from the files, actual m/z
-    and intensity values are retrieved on demand.
--   *on-disk* mode enables analysis of very large experiments.
--   Interactive code: read the toy data set:
-    -   subset from 2 files with pooled serum samples
-    -   UHPLC (Agilent 1290) coupled with Q-TOF MS (TripleTOF 5600+ AB Sciex)
-    -   HILIC-based chromatographic separation
+- MS data can be loaded with the `readMSData` function.
+- `mode = "onDisk"` does read only header information from the files, actual m/z
+  and intensity values are retrieved on demand.
+- *on-disk* mode enables analysis of very large experiments.
+- Interactive code: read the toy data set:
+  - subset from 2 files with pooled serum samples
+  - UHPLC (Agilent 1290) coupled with Q-TOF MS (TripleTOF 5600+ AB Sciex)
+  - HILIC-based chromatographic separation
 
-```{r  load-data, message = FALSE }
+```{r load-data, message = FALSE }
 library(MSnbase)
 library(xcms)
 library(doParallel)
@@ -116,29 +96,29 @@ fls <- dir(system.file("sciex", package = "msdata"), full.names = TRUE)
 
 ## Define a data.frame with additional information on the files.
 pd <- data.frame(file = basename(fls),
-		 injection_idx = c(1, 19),
-		 sample = c("POOL_1", "POOL_2"),
-		 group = "POOL")
-data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd),
-		   mode = "onDisk") 
+                 injection_idx = c(1, 19),
+                 sample = c("POOL_1", "POOL_2"),
+                 group = "POOL")
+data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd), 
+                   mode = "onDisk") 
 ```
 
--   Parallel processing setup should be defined at the start.
--   Most functions from `xcms` and `MSnbase` are parallelized *per-file* and use the
-    registered setup.
--   Interactive code: parallel processing setup.
+- Parallel processing setup should be defined at the start.
+- Most functions from `xcms` and `MSnbase` are parallelized *per-file* and use 
+  the registered setup.
+- Interactive code: parallel processing setup.
 
-```{r  parallel-setup, message = FALSE }
+```{r parallel-setup, message = FALSE }
 ## Set up parallel processing using 3 cores
 registerDoParallel(3)
 register(bpstart(DoparParam()), default = TRUE) 
 ```
 
--   Data is an `OnDiskMSnExp`; access phenotype information using `pData` or `$`,
-    general spectrum information using `fData`.
--   Interactive code: get to know the `OnDiskMSnExp` object.
+- Data is an `OnDiskMSnExp`; access phenotype information using `pData` or `$`,
+  general spectrum information using `fData`.
+- Interactive code: get to know the `OnDiskMSnExp` object.
 
-```{r  show-fData, message = FALSE, results = "hide" }
+```{r show-fData, message = FALSE, results = "hide"}
 data
 
 ## Access phenotype information
@@ -148,21 +128,22 @@ pData(data)
 data$injection_idx
 
 ## Access spectrum header information
-head(fData(data)) 
+head(fData(data))
 ```
 
--   Note: with the data not being in memory, any data manipulation (such as
-    smoothing) is never applied to the data but is performed on-the-fly.
+- Note: with the data not being in memory, any data manipulation (such as
+  smoothing) is never applied to the data but is performed on-the-fly.
 
 
 ## Basic data access and visualization
 
--   MS data in an `OnDiskMSnExp` object is organized by spectrum (similarly to mzML
-    files).
--   Access general spectrum information with `msLevel`, `centroided`, `rtime`, `polarity`.
--   Use `fromFile` to know which values belong to which file/sample.
--   `Spectrum` object: container for m/z and intensity values.
--   Interactive code: access general spectrum information.
+- MS data in an `OnDiskMSnExp` object is organized by spectrum (similarly to 
+  mzML files).
+- Access general spectrum information with `msLevel`, `centroided`, `rtime`,
+  `polarity`.
+- Use `fromFile` to know which values belong to which file/sample.
+- `Spectrum` object: container for m/z and intensity values.
+- Interactive code: access general spectrum information.
 
 ```{r  general-access, message = FALSE }
 ## Get the retention time
@@ -179,19 +160,19 @@ rts <- split(rtime(data), fromFile(data))
 lengths(rts) 
 ```
 
--   `spectra` gets the list of all spectra (from all files). This loads the full
-    data from all files, which can be slow!
--   In most cases we work with subsets anyway: use filter functions to subset the
-    data:
-    -   `filterFile` subset to individual files/samples.
-    -   `filterRtime` restrict to specific retention time window.
-    -   `filterMz` restrict to m/z range.
-    -   `filterMsLevel` subset to certain MS level(s).
--   Data access will be fast on indexed mzML, mzXML and CDF files.
--   Interactive code: extract all spectra measured between 180 and 181
-    seconds. Using the `%>%` (pipe) operator to avoid nested function calls.
+- `spectra` gets the list of all spectra (from all files). This loads the full
+  data from all files, which can be slow!
+- In most cases we work with subsets anyway: use filter functions to subset the
+  data:
+  - `filterFile` subset to individual files/samples.
+  - `filterRtime` restrict to specific retention time window.
+  - `filterMz` restrict to m/z range.
+  - `filterMsLevel` subset to certain MS level(s).
+- Data access will be fast on indexed mzML, mzXML and CDF files.
+- Interactive code: extract all spectra measured between 180 and 181
+  seconds. Using the `%>%` (pipe) operator to avoid nested function calls.
 
-```{r  spectra-filterRt, message = FALSE }
+```{r spectra-filterRt, message = FALSE }
 ## Get all spectra measured between 180 and 181 seconds
 ## Use %>% for better readability
 sps <- data %>%
@@ -205,19 +186,19 @@ length(sps)
 sapply(sps, fromFile) 
 ```
 
--   Interactive code: plot the data from the last spectrum
+- Interactive code: plot the data from the last spectrum
 
-```{r  spectrum-plot, message = FALSE, fig.cap = "Spectrum at a retention time of about 180 seconds." }
+```{r spectrum-plot, message = FALSE, fig.cap = "Spectrum at a retention time of about 180 seconds." }
 plot(sps[[6]]) 
 ```
 
--   Spectra represent intensities along the m/z dimension for discrete retention
-    times.
--   The `chromatogram` function retrieves chromatographic data (intensities along
-    the retention time axis for a certain m/z range).
--   Interactive code: get the total ion chromatogram for each file.
+- Spectra represent intensities along the m/z dimension for discrete retention
+  times.
+- The `chromatogram` function retrieves chromatographic data (intensities along
+  the retention time axis for a certain m/z range).
+- Interactive code: get the total ion chromatogram for each file.
 
-```{r  chromatogram, message = FALSE, fig.cap = "Total ion chromatogram.", fig.width = 10, fig.height = 5 }
+```{r chromatogram, message = FALSE, fig.cap = "Total ion chromatogram.", fig.width = 10, fig.height = 5 }
 ## Get chromatographic data (TIC) for an m/z slice
 chr <- chromatogram(data)
 chr
@@ -226,12 +207,12 @@ chr
 plot(chr) 
 ```
 
--   We have one chromatogram per file.
--   `aggregationFun` parameter allows to switch from TIC `"sum"` to BPC `"max"`.
--   Interactive code: extract ion chromatogram for Serine ([M+H]+ adduct m/z
-    106.0455 matches the second largest peak in spectrum above).
+- We have one chromatogram per file.
+- `aggregationFun` parameter allows to switch from TIC `"sum"` to BPC `"max"`.
+- Interactive code: extract ion chromatogram for Serine ([M+H]+ adduct m/z
+  106.0455 matches the second largest peak in spectrum above).
 
-```{r  serine-xic, message = FALSE, fig.cap = "Extracted ion chromatogram for the Serine [M+H]+ ion." }
+```{r serine-xic, message = FALSE, fig.cap = "Extracted ion chromatogram for the Serine [M+H]+ ion." }
 ## Plot first the spectrum
 par(mfrow = c(1, 2))
 plot(mz(sps[[6]]), intensity(sps[[6]]), type = "h", xlab = "m/z",
@@ -248,23 +229,23 @@ data %>%
  
 ```
 
--   Easy to access sub-sets of the raw data.
--   `spectra` to get intensities along m/z for discrete retention time.
--   `chromatogram` to get intensities along rt for m/z range.
--   Use `rtime`, `mz`, `intensity` to access the MS values.
+- Easy to access sub-sets of the raw data.
+- `spectra` to get intensities along m/z for discrete retention time.
+- `chromatogram` to get intensities along rt for m/z range.
+- Use `rtime`, `mz`, `intensity` to access the MS values.
 
 
 ## Centroiding of profile MS data
 
--   *centroiding* is the process in which mass peaks are reduced to a single,
-    representative signal, their centroids.
--   `xcms`, specifically *centWave* was designed for centroided data.
--   Proper centroiding can improve data accuracy.
--   `MSnase` provides basic tools to perform MS data smoothing and centroiding:
-    `smooth` and `pickPeaks`.
--   Interactive code: show the combined m/z, rt and intensity data for Serine.
+- *centroiding* is the process in which mass peaks are reduced to a single,
+  representative signal, their centroids.
+- `xcms`, specifically *centWave* was designed for centroided data.
+- Proper centroiding can improve data accuracy.
+- `MSnase` provides basic tools to perform MS data smoothing and centroiding:
+  `smooth` and `pickPeaks`.
+- Interactive code: show the combined m/z, rt and intensity data for Serine.
 
-```{r  serine-profile-mode-data, message = FALSE, fig.cap = "Profile data for Serine." }
+```{r serine-profile-mode-data, message = FALSE, fig.cap = "Profile data for Serine." }
 ## Filter the MS data to the signal from the Serine ion and plot it using
 ## type = "XIC"
 data %>%
@@ -273,13 +254,13 @@ data %>%
     plot(type = "XIC") 
 ```
 
--   plot `type = "XIC"` creates a combined chromatographic and *map* visualization of
-    the data.
--   Interactive code: smooth data in m/z dimension using a Savitzky-Golay filter
-    followed by a centroiding that simply reports the maximum signal for each mass
-    peak in each spectrum. See `?pickPeaks` for more advanced options.
+- plot `type = "XIC"` creates a combined chromatographic and *map* 
+  visualization of the data.
+- Interactive code: smooth data in m/z dimension using a Savitzky-Golay filter
+  followed by a centroiding that simply reports the maximum signal for each 
+  mass peak in each spectrum. See `?pickPeaks` for more advanced options.
 
-```{r  centroiding, message = FALSE, warning = FALSE, fig.cap = "Centroided data for Serine.", fig.width = 10, fig.height = 5 }
+```{r centroiding, message = FALSE, warning = FALSE, fig.cap = "Centroided data for Serine.", fig.width = 10, fig.height = 5 }
 ## Smooth the signal, then do a simple peak picking.
 data_cent <- data %>%
     smooth(method = "SavitzkyGolay", halfWindowSize = 6) %>%
@@ -292,12 +273,12 @@ data_cent %>%
     plot(type = "XIC") 
 ```
 
--   Note: data smoothing and centroiding is applied to the data *on-the-fly*, each
-    time m/z or intensity values are accessed. To make the centroiding *persistent*
-    we need to export the centroided data.
--   Interactive code: export the smoothed data to new files and re-read the data.
+- Note: data smoothing and centroiding is applied to the data *on-the-fly*, 
+  each time m/z or intensity values are accessed. To make the centroiding 
+  *persistent* we need to export the centroided data.
+- Interactive code: export the smoothed data to new files and re-read the data.
 
-```{r  export-centroided, message = FALSE }
+```{r export-centroided, message = FALSE }
 ## Write the centroided data to files with the same names in the current
 ## directory
 fls_new <- basename(fileNames(data))
@@ -314,15 +295,15 @@ data_cent <- readMSData(fls_new, pdata = new("NAnnotatedDataFrame", pd),
 
 ### Chromatographic peak detection
 
--   Aim: identify chromatographic peaks in the data.
--   Function: `findChromPeaks`.
--   Available methods:
-    -   *matchedFilter* (`MatchedFilterParam`) [@Smith:2006ic].
-    -   *centWave* (`CentWaveParam`) [@Tautenhahn:2008fx].
-    -   *massifquant* (`MassifquantParam`) [@Conley:2014ha].
+- Aim: identify chromatographic peaks in the data.
+- Function: `findChromPeaks`.
+- Available methods:
+  - *matchedFilter* (`MatchedFilterParam`) [@Smith:2006ic].
+  - *centWave* (`CentWaveParam`) [@Tautenhahn:2008fx].
+  - *massifquant* (`MassifquantParam`) [@Conley:2014ha].
 
--   CentWave is a two-step approach:
--   identify regions of interest.
+- CentWave is a two-step approach:
+- identify regions of interest.
 
 ![](images/centWave-ROI.png)
 
@@ -330,19 +311,19 @@ data_cent <- readMSData(fls_new, pdata = new("NAnnotatedDataFrame", pd),
 
 ![](images/centWave-CWT.png)
 
--   CentWave parameters:
+- CentWave parameters:
 
 ```{r  centwave-help, results = "hide" }
 ?CentWaveParam 
 ```
 
--   Crucial parameters: `peakwidth`, `ppm`.
--   `peakwidth`: minimal and maximal expected peak width. Depends on the LC
-    settings of the experiment.
--   Interactive code: extract chromatographic data for Serine and perform peak
-    detection using default parameters
+- Crucial parameters: `peakwidth`, `ppm`.
+- `peakwidth`: minimal and maximal expected peak width. Depends on the LC
+  settings of the experiment.
+- Interactive code: extract chromatographic data for Serine and perform peak
+  detection using default parameters
 
-```{r  centWave-default, message = FALSE, fig.cap = "XIC for Serine", results = "hide" }
+```{r centWave-default, message = FALSE, fig.cap = "XIC for Serine", results = "hide" }
 ## Get the XIC for serine in the first file
 srn_chr <- chromatogram(data_cent, rt = c(165, 200),
 			mz = c(106.03, 106.06),
@@ -360,10 +341,10 @@ findChromPeaks(srn_chr, param = cwp)
 cwp 
 ```
 
--   What went wrong? Default for `peakwidth` does not match the current data.
--   Interactive code: change `peakwidth` and run again.
+- What went wrong? Default for `peakwidth` does not match the current data.
+- Interactive code: change `peakwidth` and run again.
 
-```{r  centWave-adapted, message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide" }
+```{r centWave-adapted, message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide" }
 cwp <- CentWaveParam(peakwidth = c(2, 10))
 
 pks <- findChromPeaks(srn_chr, param = cwp)
@@ -373,11 +354,11 @@ plot(srn_chr)
 rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040") 
 ```
 
--   Ideally check settings on more known compounds.
--   `ppm`: maximal allowed scattering of m/z values for one ion.
--   Interactive code: evaluate the m/z scattering of the signal for Serine.
+- Ideally check settings on more known compounds.
+- `ppm`: maximal allowed scattering of m/z values for one ion.
+- Interactive code: evaluate the m/z scattering of the signal for Serine.
 
-```{r  Serine-mz-scattering-plot, message = FALSE }
+```{r Serine-mz-scattering-plot, message = FALSE }
 ## Restrict the data to signal from Sering
 srn <- data_cent %>%
     filterRt(rt = c(179, 186)) %>%
@@ -387,10 +368,10 @@ srn <- data_cent %>%
 plot(srn, type = "XIC") 
 ```
 
--   Interactive code: calculate the difference in m/z values between consecutive
-    scans.
+- Interactive code: calculate the difference in m/z values between consecutive
+  scans.
 
-```{r  define-ppm, message = FALSE }
+```{r define-ppm, message = FALSE }
 ## Extract the Serine data for one file as a data.frame
 srn_df <- as(filterFile(srn, 1), "data.frame")
 head(srn_df)
@@ -402,19 +383,19 @@ diff(srn_df$mz)
 diff(srn_df$mz) * 1e6 / mean(srn_df$mz) 
 ```
 
--   Ideally this should also be performed on more compounds.
--   `ppm` should be large enough to capture the full chromatographic peak.
--   Interactive code: perform chromatographic peak detection.
+- Ideally this should also be performed on more compounds.
+- `ppm` should be large enough to capture the full chromatographic peak.
+- Interactive code: perform chromatographic peak detection.
 
-```{r  findPeaks-centWave, message = FALSE }
+```{r findPeaks-centWave, message = FALSE }
 ## Perform peak detection
 cwp <- CentWaveParam(peakwidth = c(2, 10), ppm = 30)
 data_cent <- findChromPeaks(data_cent, param = cwp) 
 ```
 
--   Result: `XCMSnExp` object extends the `OnDiskMSnExp`, so we can access the data in
-    the same way plus it stores preprocessing results.
--   Interactive code: explore the result object.
+- Result: `XCMSnExp` object extends the `OnDiskMSnExp`, so we can access the 
+  data in the same way plus it stores preprocessing results.
+- Interactive code: explore the result object.
 
 ```{r  xcmsnexp, message = FALSE, results = "hide" }
 data_cent
@@ -423,10 +404,10 @@ data_cent
 head(chromPeaks(data_cent)) 
 ```
 
--   For quality assessment, we could also do some summary statistics on the
-    identified peaks.
--   Interactive code: plot the location of the identified peaks in the m/z - rt
-    plane.
+- For quality assessment, we could also do some summary statistics on the
+  identified peaks.
+- Interactive code: plot the location of the identified peaks in the m/z - rt
+  plane.
 
 ```{r  plotChromPeaks, message = FALSE, fig.cap = "Location of the identified chromatographic peaks" }
 par(mfrow = c(1, 2))
@@ -437,34 +418,34 @@ plotChromPeaks(data_cent, 2)
 
 ### Alignment
 
--   Aim: adjusts shifts in retention times between samples.
--   Interactive code: plot the base peak chromatograms of all files.
+- Aim: adjusts shifts in retention times between samples.
+- Interactive code: plot the base peak chromatograms of all files.
 
-```{r  alignment-bpc-raw, message = FALSE, fig.cap = "BPC of all files", fig.width = 8, fig.height = 4 }
+```{r alignment-bpc-raw, message = FALSE, fig.cap = "BPC of all files", fig.width = 8, fig.height = 4 }
 ## Extract base peak chromatograms
 bpc_raw <- chromatogram(data_cent, aggregationFun = "max")
 par(mfrow = c(1, 1))
 plot(bpc_raw) 
 ```
 
--   Function: `adjustRtime`.
--   Available methods:
-    -   *peakGroups* (`PeakGroupsParam`) [@Smith:2006ic]: align samples based on
-        hook peaks.
-    -   *obiwarp* (`ObiwarpParam`) [@Prince:2006jj]: warps the (full) data to a
-        reference sample.
+- Function: `adjustRtime`.
+- Available methods:
+  - *peakGroups* (`PeakGroupsParam`) [@Smith:2006ic]: align samples based on
+    hook peaks.
+  - *obiwarp* (`ObiwarpParam`) [@Prince:2006jj]: warps the (full) data to a
+    reference sample.
 
--   peakGroups works reasonably well in most cases.
--   Need to define the hook peaks first: peaks present in most/all samples.
--   Important parameters:
-    -   `minFraction`: proportion of samples in which a feature has to be present (0.9
-        for present in 90% of samples).
-    -   `span`: degree of smoothing for the loess function, 0 likely overfitting, 1
-        linear regression. Values between 0.4 and 0.6 seem reasonable.
--   Interactive code: perform a peak grouping to define potential hook peaks and
-    align the samples based on these.
+- peakGroups works reasonably well in most cases.
+- Need to define the hook peaks first: peaks present in most/all samples.
+- Important parameters:
+  - `minFraction`: proportion of samples in which a feature has to be present (0.9
+    for present in 90% of samples).
+  - `span`: degree of smoothing for the loess function, 0 likely overfitting, 1
+    linear regression. Values between 0.4 and 0.6 seem reasonable.
+- Interactive code: perform a peak grouping to define potential hook peaks and
+  align the samples based on these.
 
-```{r  alignment-correspondence, message = FALSE }
+```{r alignment-correspondence, message = FALSE }
 ## Define the settings for the initial peak grouping - details for
 ## choices in the next section.
 pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
@@ -476,23 +457,23 @@ pgp <- PeakGroupsParam(minFraction = 1, span = 0.6)
 data_cent <- adjustRtime(data_cent, param = pgp) 
 ```
 
--   Adjusted retention times are stored in the object.
--   Interactive code: inspect the difference between raw and adjusted retention
-    times. Helps to determine whether settings were OK.
+- Adjusted retention times are stored in the object.
+- Interactive code: inspect the difference between raw and adjusted retention
+  times. Helps to determine whether settings were OK.
 
-```{r  alignment-result, message = FALSE, fig.width = 8, fig.height = 4 }
+```{r alignment-result, message = FALSE, fig.width = 8, fig.height = 4 }
 ## Plot the difference between raw and adjusted retention times
 plotAdjustedRtime(data_cent) 
 ```
 
--   Evaluate alignment results:
-    -   difference between raw and adjusted retention time reasonable.
-    -   hook peaks along the full retention time range.
-    -   comparison of BPC (TIC) before/after alignment.
-    -   evaluate data for known compounds.
--   Interactive code: plot BPC before and after alignment.
+- Evaluate alignment results:
+  - difference between raw and adjusted retention time reasonable.
+  - hook peaks along the full retention time range.
+  - comparison of BPC (TIC) before/after alignment.
+  - evaluate data for known compounds.
+- Interactive code: plot BPC before and after alignment.
 
-```{r  bpc-raw-adjusted, message = FALSE, fig.cap = "BPC before (top) and after (bottom) alignment.", fig.width = 10, fig.height = 8 }
+```{r bpc-raw-adjusted, message = FALSE, fig.cap = "BPC before (top) and after (bottom) alignment.", fig.width = 10, fig.height = 8 }
 par(mfrow = c(2, 1))
 ## Plot the raw base peak chromatogram
 plot(bpc_raw)
@@ -500,9 +481,9 @@ plot(bpc_raw)
 plot(chromatogram(data_cent, aggregationFun = "max")) 
 ```
 
--   Interactive code: plot Serine XIC before and after alignment.
+- Interactive code: plot Serine XIC before and after alignment.
 
-```{r  serine-xic-adjusted, message = FALSE, fig.cap = "XIC for Serine before (left) and after (right) alignment", fig.width = 10, fig.height = 4 }
+```{r serine-xic-adjusted, message = FALSE, fig.cap = "XIC for Serine before (left) and after (right) alignment", fig.width = 10, fig.height = 4 }
 ## Use adjustedRtime parameter to access raw/adjusted retention times
 par(mfrow = c(1, 2), mar = c(4, 4.5, 1, 0.5))
 plot(chromatogram(data_cent, mz = c(106.04, 106.06),
@@ -511,27 +492,27 @@ plot(chromatogram(data_cent, mz = c(106.04, 106.06),
 		  rt = c(179, 186))) 
 ```
 
--   If we need to repeat simply remove alignment results with `dropAdjustedRtime`
-    and retry.
+- If we need to repeat simply remove alignment results with `dropAdjustedRtime`
+  and retry.
 
 
 ### Correspondence
 
--   Aim: group signal (peaks) from the same ion across samples.
--   Function: `groupChromPeaks`.
--   Methods available:
-    -   *peak density* (`PeakDensityParam`) [@Smith:2006ic].
-    -   *nearest* (`NearestPeaksParam`) [@Katajamaa:2006jh].
+- Aim: group signal (peaks) from the same ion across samples.
+- Function: `groupChromPeaks`.
+- Methods available:
+  - *peak density* (`PeakDensityParam`) [@Smith:2006ic].
+  - *nearest* (`NearestPeaksParam`) [@Katajamaa:2006jh].
 
--   peak density: 
-    -   iterates through slices of m/z ranges and groups chromatographic in each if
-        peaks (from same or different samples) are close in retention time.
-    -   whether they are close is estimated on the distribution of peaks along the
-        retention time.
--   Interactive code: plot the data for the m/z slice containing the Serine peak
-    and dry-run a correspondence analysis.
+- peak density: 
+  - iterates through slices of m/z ranges and groups chromatographic in each if
+    peaks (from same or different samples) are close in retention time.
+  - whether they are close is estimated on the distribution of peaks along the
+    retention time.
+- Interactive code: plot the data for the m/z slice containing the Serine peak
+  and dry-run a correspondence analysis.
 
-```{r  correspondence-example, message = FALSE, results = "hide", fig.cap = "BPC for a m/z slice and defined features within this slice based on default settings." }
+```{r correspondence-example, message = FALSE, results = "hide", fig.cap = "BPC for a m/z slice and defined features within this slice based on default settings." }
 ## Plot the BPC for the m/z slice containing serine
 par(mfrow = c(2, 1), mar = c(4, 4.3, 1, 0.5))
 plot(chromatogram(data_cent, mz = c(106.04, 106.06), aggregationFun = "max"))
@@ -548,24 +529,28 @@ plotChromPeakDensity(data_cent, mz = c(106.04, 106.06),
  
 ```
 
--   Black line shows the peak density estimate, points represent the position of
-    peaks along the retention time axis per sample and grey rectangles indicate
-    grouped peaks (features).
--   Parameters:
-    -   `binSize`: m/z width of the bin/slice of data in which peaks are grouped.
-    -   `bw` defines the smoothness of the density function.
-    -   `maxFeatures`: maximum number of features to be defined in one bin.
-    -   `minFraction`: minimum proportion of samples (of one group!) for which a peak
-        has to be present.
-    -   `minSamples`: minimum number of samples a peak has to be present.
--   Parameters `minFraction` and `minSamples` depend on experimental layout!
--   `binSize` should be small enough that peaks from different ions measured at the
-    same retention time would not be grouped together.
--   Interactive code: determine acceptable `bw` setting. Plot data for ions with
-    same m/z and similar retention time: isomers Betaine and Valine ([M+H]+ m/z
-    118.08625).
+- Black line shows the peak density estimate, points represent the position of
+  peaks along the retention time axis per sample and grey rectangles indicate
+  grouped peaks (features).
+  
+- Parameters:
+  - `binSize`: m/z width of the bin/slice of data in which peaks are grouped.
+  - `bw` defines the smoothness of the density function.
+  - `maxFeatures`: maximum number of features to be defined in one bin.
+  - `minFraction`: minimum proportion of samples (of one group!) for which a 
+    peak has to be present.
+  - `minSamples`: minimum number of samples a peak has to be present.
+  
+- Parameters `minFraction` and `minSamples` depend on experimental layout!
 
-```{r  correspondence-bw, message = FALSE, fig.cap = "Define correspondence settings to separate Methylhistidine peaks.", fig.width = 10, fig.height = 10 }
+- `binSize` should be small enough that peaks from different ions measured at 
+  the same retention time would not be grouped together.
+
+- Interactive code: determine acceptable `bw` setting. Plot data for ions with
+  same m/z and similar retention time: isomers Betaine and Valine ([M+H]+ m/z
+  118.08625).
+
+```{r correspondence-bw, message = FALSE, fig.cap = "Define correspondence settings to separate Methylhistidine peaks.", fig.width = 10, fig.height = 10 }
 par(mfrow = c(3, 1), mar = c(3, 4.3, 1, 1))
 
 ## Plot the chromatogram for an m/z slice containing Betaine and Valine
@@ -582,9 +567,9 @@ pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8)
 plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within") 
 ```
 
--   Reducing the `bw` enables grouping of isomer peaks into different
-    features.
--   Interactive code: perform the correspondence analysis.
+- Reducing the `bw` enables grouping of isomer peaks into different
+  features.
+- Interactive code: perform the correspondence analysis.
 
 ```{r  correspondence-analysis, message = FALSE }
 pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
@@ -594,11 +579,11 @@ pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
 data_cent <- groupChromPeaks(data_cent, param = pdp) 
 ```
 
--   Evaluate results after correspondence: check for another slice with isomers:
-    Leucine, Isoleucine ([M+H]+ m/z 132.10191). Setting `simulate = FALSE` shows the
-    actual grouping results.
+- Evaluate results after correspondence: check for another slice with isomers:
+  Leucine, Isoleucine ([M+H]+ m/z 132.10191). Setting `simulate = FALSE` shows 
+  the actual grouping results.
 
-```{r  correspondence-evaluate, message = FALSE, fig.cap = "Result of correspondence on a slice containing the isomers Leucine and Isoleucine.", fig.width = 10, fig.heigt = 8 }
+```{r correspondence-evaluate, message = FALSE, fig.cap = "Result of correspondence on a slice containing the isomers Leucine and Isoleucine.", fig.width = 10, fig.heigt = 8 }
 par(mfrow = c(2, 1), mar = c(3, 4.3, 1, 1))
 
 ## Plot the chromatogram for an m/z slice containing Leucine and Isoleucine
@@ -610,9 +595,9 @@ plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within",
 		     simulate = FALSE) 
 ```
 
--   Interactive code: inspect result object and extract feature intensities.
+- Interactive code: inspect result object and extract feature intensities.
 
-```{r  correspondence-result-object, message = FALSE }
+```{r correspondence-result-object, message = FALSE }
 ## Get general information
 data_cent
 
@@ -623,11 +608,10 @@ processHistory(data_cent)
 processParam(processHistory(data_cent)[[1]]) 
 ```
 
--   Interactive code: inspect definition of features and extract feature
+- Interactive code: inspect definition of features and extract feature 
+  intensities.
 
-intensities.
-
-```{r  correspondence-feature-values, message = FALSE }
+```{r correspondence-feature-values, message = FALSE }
 ## Definition of the features
 featureDefinitions(data_cent)
 
@@ -639,24 +623,26 @@ fmat <- featureValues(data_cent, value = "into", method = "maxint")
 head(fmat) 
 ```
 
--   `featureValues` parameters:
-    -   `value`: name of the column in `chromPeaks` that should be returned.
-    -   `method`: for features with multiple peaks in one sample: from which peak the
-        should the value be returned?
+- `featureValues` parameters:
+  - `value`: name of the column in `chromPeaks` that should be returned.
+  - `method`: for features with multiple peaks in one sample: from which peak
+    the should the value be returned?
 
--   About missing values: peak detection may have failed. `fillChromPeaks` allows to
-    fill in signal for missing peaks from the feature area (defined by the median
-    rt and mz of all peaks assigned to the feature).
-    Parameters:
-    -   `expandMz`: expands the region from which signal is integrated in m/z
-        dimension. A value of 0 means no expansion, 1 means the region is grown by
-        half of the feature's m/z width on both sides.
-    -   `expandRt`: expand the retention time window of the feature for integration.
-    -   `ppm`: expand the m/z width by a m/z dependent value.
--   Interactive code: evaluate the number of missing peaks and use `fillChromPeaks`
-    to retrieve a signal for them from the raw files.
+- About missing values: peak detection may have failed. `fillChromPeaks` 
+  allows to fill in signal for missing peaks from the feature area (defined 
+  by the median rt and mz of all peaks assigned to the feature).
+  Parameters:
+  - `expandMz`: expands the region from which signal is integrated in m/z
+    dimension. A value of 0 means no expansion, 1 means the region is grown 
+    by half of the feature's m/z width on both sides.
+  - `expandRt`: expand the retention time window of the feature for 
+    integration.
+  - `ppm`: expand the m/z width by a m/z dependent value.
 
-```{r  fillChromPeaks, message = FALSE }
+- Interactive code: evaluate the number of missing peaks and use 
+  `fillChromPeaks` to retrieve a signal for them from the raw files.
+
+```{r fillChromPeaks, message = FALSE }
 ## Number of missing values
 sum(is.na(fmat))
 
@@ -671,16 +657,16 @@ fmat_fld <- featureValues(data_cent, value = "into", method = "maxint")
 head(fmat_fld) 
 ```
 
--   Note: `dropFilledChromPeaks` removes filled-in peaks again.
+- Note: `dropFilledChromPeaks` removes filled-in peaks again.
 
 
 # Summary
 
--   Don't blindly use default parameters!
--   The new data objects and functions are aimed to simplify data access and
-    inspection of results and should facilitate data set-dependent definition of
-    algorithm parameters.
--   More work to come for the analysis of chromatographic data (SRM/MRM).
+- Don't blindly use default parameters!
+- The new data objects and functions are aimed to simplify data access and
+  inspection of results and should facilitate data set-dependent definition 
+  of algorithm parameters.
+- More work to come for the analysis of chromatographic data (SRM/MRM).
 
 
 # References
